1.2.4 - xxxxxxxxxxxxxxx
=======================
* Depend on ZooKeeper 3.4.4

* Added a new Examples sub project - better late than never.

* Guaranteed deletes were not working correctly if CuratorFramework.usingNamespace() was used.

* I can't believe this has been like this for so long. The executor passed to listeners was never used. Doh!!! Major bug.

* Issue 188: Display a meaningful message if the value node is corrupted

* Issue 194: Initial sync() operation should occur immediately - like the change in 1.2.3 for all "background"
operations.

1.2.3 - October 6, 2012
=======================
* Previously, all background operations (i.e. when the inBackground() method is used)
were put into a queue and processed in an internal thread. Curator does this to handle retries in
background operations. This can be improved, however. The first time the background operation is
executed the ZooKeeper method can be called directly - without queuing. This will get the operation
into ZooKeeper immediately and will help prevent Curator's internal queue from backing up.

* Issue 173: The DistributedQueue (and, thus, all the other queue recipes) was unnecessarily
calling getChildren (with a watch) after each group of children was processed. It can just as easily
wait for the internal cache to get its watch notified. This change creates an edge case, though,
for ErrorMode.REQUEUE. Consequently, when in mode ErrorMode.REQUEUE the DistributedQueue now
deletes the bad message and re-creates it. This required the use of ZooKeeper 3.4.x's transactions.
So, if you use ErrorMode.REQUEUE you MUST be running ZooKeeper 3.4+.

1.2.2 - September 30, 2012
==========================
* NOTE: The 1.0.x branch is not being released and has been deprecated. It was advised many versions
ago that this was coming. So, here it is.

* For ZKClient Bridge: 1. Previous method of sending initial connect event to ZKClient was
unreliable; 2. Added an option to not close the curator instance
