@@ -6,8 +6,8 @@ import org.apache.zookeeper.ZooKeeper;
 public class DefaultZookeeperFactory implements ZookeeperFactory
 {
     @Override
-    public ZooKeeper newZooKeeper(String connectString, int sessionTimeout, Watcher watcher) throws Exception
+    public ZooKeeper newZooKeeper(String connectString, int sessionTimeout, Watcher watcher, boolean canBeReadOnly) throws Exception
     {
-        return new ZooKeeper(connectString, sessionTimeout, watcher);
+        return new ZooKeeper(connectString, sessionTimeout, watcher, canBeReadOnly);
     }
 }
