@@ -43,6 +43,7 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 
+@SuppressWarnings("deprecation")
 public class TestFramework extends BaseClassForTests
 {
     @Test
